--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,1 +1,28 @@
-<p>CRIAR TAREFA</p>
+<head>
+    <link rel="stylesheet" href="/public/css/create.css">
+</head>
+
+
+<h1 class="tarefa">Crie sua Tarefa</h1>
+<h2 class="info">Informacoes da Tarefa</h2>
+
+<div class="row">
+  <div class="col">
+    <label>Nome Completo</label>
+    <input type="text" class="form-control" placeholder="Nome Completo" aria-label="First name">
+  </div>
+  <div class="col">
+    <label>Data de Conclusao Prevista</label>
+    <input type="date" class="form-control" placeholder="**/**/****" aria-label="Last name">
+  </div>
+</div>
+<br>
+<div class="mb-3">
+  <label for="exampleFormControlTextarea1" class="form-label">Descricao</label>
+  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</div>
+
+<div class="botoes">
+    <button type="button" class="btn btn-primary btn-lg">Criar</button>
+    <button type="button" class="btn btn-secondary btn-lg">Cancelar</button>
+</div>
