--- a/views/usuario/register.handlebars
+++ b/views/usuario/register.handlebars
@@ -1,1 +1,27 @@
-<p>CADASTRO</p>
+<head>
+    <link rel="stylesheet" href="/public/css/cadastro.css">
+</head>
+
+ <div class="main-login">
+        <div class="right-login">
+            <div class="card-login">
+                <h1>Cadastro</h1>
+                <div class="cadastro-text">
+                    <span class="registro-texto">Ja tem uma conta Cadastrada? </span><a href="/">Faca Login</a>
+                </div>
+                <div class="textfield">
+                    <label for="usuario">Usuário</label>
+                    <input type="text" name="usuario" placeholder="Usuário">
+                </div>
+                <div class="textfield">
+                    <label for="senha">Senha</label>
+                    <input type="password" name="senha" placeholder="Senha">
+                </div>
+                <button class="btn-login">Cadastrar-se</button>
+            </div>
+        </div>
+        <div class="left-login">
+            <h1>Cadastre-se para ter acesso ao sistema!</h1>
+            <img src="/public/img/Menina2.png" class="left-login-image" alt="ocean">
+        </div>
+    </div>
