--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,75 +1,83 @@
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Custom ToDo List</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"/>
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/public/css/style.css" />
-  </head>
-  <body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container">
-        <a class="navbar-brand" href="/">HandleBars</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="/cadastrar">Cadastrar</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/consultar">Consultar</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Corpo da Página -->
-    <div class="container body">
-      <div class="col-12 mt-10">
-        {{{body}}}
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>{{title}}</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"/>
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
+</head>
+<body>
+  <div class="container">
+    <!-- NAVBAR -->
+    <div class="row">
+      <div class="col-12">
+        <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                {{#each navbarLinks}}
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{{url}}">{{text}}</a>
+                  </li>
+                {{/each}}
+              </ul>
+            </div>
+          </div>
+        </nav>
       </div>
     </div>
 
-    <!-- Rodapé -->
+    <!-- HEADER -->
+    <div class="row">
+        <div class="col">
+            <nav class="navbar bg-light">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="#">{{header}}</a>
+              </div>
+            </nav>
+        </div>
+    </div>
+    
 
-    <footer class="footer text-center mt-auto py-3">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-12">
-            <p>© 2024 HandleBar Project. Todos os direitos reservados.</p>
+    <!-- Corpo da Página -->
+    <div class="row">
+      <div class="col-12">
+        <div class="body">
+          <div class="mt-10">
+            {{{body}}}
           </div>
         </div>
-
-        <div class="row">
-          <div class="sm col-3">
-          </div>
-          <div class="sm col-12">
-            <a href="https://github.com/vek03/CRUD-nodejs-handlebar"><i class="bi bi-github"></i></a>
-          </div>
-          <div class="sm col-3">
-          </div>
-        </div>
-
       </div>
-    </footer>
-  </body>
+    </div> 
 
-  <script src="/jquery/jquery.min.js"></script>
-  <script src="/public/js/script.js"></script>
-  <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+
+    <!-- Rodapé -->
+    <div class="row">
+      <div class="col-12">
+        <footer class="py-3 my-4">
+          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+          </ul>
+          <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+        </footer>
+      </div>
+    </div>
+  </div>
+</body>
+
+<script src="/jquery/jquery.min.js"></script>
+<script src="/public/js/script.js"></script>
+<script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+<script>
+  
+</script>
 </html>
