--- a/public/css/create.css
+++ b/public/css/create.css
@@ -1,29 +1,39 @@
+.container {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 20px;
+}
+
+
+.content {
+    text-align: center;
+}
+
 .botoes {
     text-align: center;
-    align-items: center;
-    margin: 30px;
+    margin-top: 30px;
 }
 
-.tarefa{
-    text-align: center;
+.tarefa {
     margin-bottom: 20px;
+    text-align: center
 }
 
-.info{
-    text-align: center;
+.info {
     margin-bottom: 40px;
+    text-align: center
 }
 
 .row {
-    display: flex; 
+    display: flex;
     justify-content: center;
-    align-items: center;
-    margin: 50px;
+    margin-bottom: 20px;
 }
 
-.mb-3{
-     
-    justify-content: center;
-    align-items: center;
-    margin: 50px;
+.col {
+    margin: 0 10px;
+}
+
+.mb-3 {
+    margin-bottom: 20px;
 }
