--- a/views/todo.handlebars
+++ b/views/todo.handlebars
@@ -1,43 +1,58 @@
 <head>
-    <link rel="stylesheet" href="/public/css/todo.css">
+  <link rel="stylesheet" href="/public/css/todo.css">
 </head>
 
-<div class="header-container">
-    <h1>Tarefas</h1>
-    <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#editarModal" onclick="window.location.href='./create'">
-        Criar Tarefa
+<nav class="navbar">
+  <div class="container-fluid">
+    <a href="" class="navbar-brand" style="color: #FFFFF1">Tarefas</a>
+    <a href="" class="navbar-brand" style="color: #FFFFF1">Sair</a>
+  </div>
+</nav>
+
+
+<div class="container">
+  <div class="header-container">
+    <h1>Minhas Tarefas</h1>
+    <button type="button" class="btn btn-primary btnplus" data-bs-toggle="modal" data-bs-target="#editarModal"
+      onclick="window.location.href='./create'">
+      <span class="spn">+</span>
     </button>
-</div>
+  </div>
 
 
-<div class="task-container">
-    <div class="task-content">
+  <div class="container">
+    <div class="task-container">
+      <div class="task-content">
         <div class="task-details">
-            <div class="fw-bold">Nome da Tarefa</div>
-            <p>28/04/2024</p>
+          <div class="fw-bold">Nome da Tarefa</div>
+          <p>28/04/2024</p>
         </div>
         <div class="task-buttons">
-          <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#editarModal" onclick="window.location.href='./view'">
-              Visualizar
+          <button type="button" class="btn btn-primary btnview" data-bs-toggle="modal" data-bs-target="#editarModal"
+            onclick="window.location.href='./view'">
+            Visualizar
           </button>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-              Concluir
-            </button>
+          <button type="button" class="btn btn-primary btnconcluir" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Concluir
+          </button>
         </div>
+      </div>
     </div>
+  </div>
 </div>
 
-
-
 <!-- Modal -->
+
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" >
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
-      <div class="modal-body">
-          Após concluir esta tarefa, você não poderá consultá-la novamente. Tem certeza de que deseja concluí-la? 
+      <div class="modal-body"><p>
+        Após concluir esta tarefa, você não poderá consultá-la novamente. Tem certeza de que deseja concluí-la?
+        </p>
+        
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Concluir</button>
+        <button type="button" class="btn btn-primary btnconcluir" data-bs-dismiss="modal">Concluir</button>
       </div>
     </div>
   </div>
