--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -1,12 +1,11 @@
 .container {
-    border: 1px solid #ccc;
+    border: none;
     border-radius: 8px;
     padding: 20px;
 }
 
-
 .content {
-    text-align: center;
+
 }
 
 .botoes {
@@ -31,9 +30,29 @@
 }
 
 .col {
-    margin: 0 10px;
+    margin: 0 0px;
 }
 
 .mb-3 {
     margin-bottom: 20px;
+}
+
+.navbar{
+    color: #FFFFF1;
+    background-color: #094067;
+}
+
+.form-control {
+    border: #094067 solid 1px;
+}
+
+.btn {
+    background-color: #094067;
+    border: none;
+    border-radius: 15px;
+    margin: 0 7.5vw 0 7.5vw;
+}
+
+.header-container{
+    margin-top: 5vh;
 }
