--- a/public/css/todo.css
+++ b/public/css/todo.css
@@ -1,8 +1,41 @@
+body{
+    background-color: #f8f7f2;
+}
+
+.navbar{
+    color: #FFFFF1;
+    background-color: #094067;
+}
+
+.spn{
+    font-size: 20px;
+    margin-bottom: 50%;
+}
+
+
+
+.btnplus{
+    border-radius: 100%;
+    height: 35px;
+    width: 35px;
+    color: aliceblue;
+    background-color: #094067;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navbar.a{
+    color: #FFFFF1;
+}
+
 .task-container {
     border: 1px solid #ccc;
     border-radius: 5px;
     margin-bottom: 10px;
     padding: 10px;
+    background-color: #94A1B2;
+    color: white;
 }
 
 .task-content {
@@ -20,7 +53,15 @@
 }
 
 .modal-body {
+    display: flex;
+    align-items: center;
     text-align: center;
+    height: 30vh;
+}
+
+.modal-footer {
+    display: flex;
+    justify-content: center;
 }
 
 .header-container {
@@ -34,4 +75,24 @@
     align-items: center;
     margin-bottom: 10px;
     padding: 10px;
+}
+
+.btnconcluir{
+    background-color: #094067;
+    border-radius: 15px;
+    z-index: 9;
+}
+
+.btnview{
+    background-color: #106aaa;
+    border-radius: 15px;
+    z-index: 9;
+}
+
+.btn{
+    border: none;
+}
+
+.modal-body p{
+    font-size: 26px;
 }
