--- a/public/css/view.css
+++ b/public/css/view.css
@@ -1,17 +1,23 @@
+body{
+    background-color: #f8f7f2;
+}
 
+.navbar{
+    color: #FFFFF1;
+    background-color: #094067;
+}
 
 .task-container {
     display: flex;
     justify-content: center; 
     width: 80%;
-    max-width: 100%;
     background-color: #fff;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    margin-left: 100px;
-    
-    
+    margin: 10vh auto 0px auto;
+    padding-left: 2%;
+    padding-right: 1%;
 }
 
 .task-details {
@@ -30,36 +36,46 @@
 .edit-button {
     flex: 1;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    color: #fff;
+    justify-content: right;
 }
 
 
 .edit-button button {
-    background-color: #007bff;
     color: #fff;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    border: none;
-    margin-top: 20px;
     padding: 10px 20px;
-    border-radius: 5px;
     font-size: 16px;
 }
 
-.edit-button button:hover {
-    background-color: #0056b3;
+.back-button{
+    position: relative;
+    top: 25px;
+}
+
+.back-button a{
+    font-size: 30px;
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
+}
+
+
+.btn {
+    background-color: #094067;
+    border: none;
+    border-radius: 15px;
+}
+
+.task-details{
+
+    text-align: justify;
 }
 
 
 @media screen and (min-width: 768px) {
     .task-container {
         width: 80%;
-        max-width: 600px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 20px;
     }
 }
 
@@ -67,9 +83,6 @@
 @media screen and (max-width: 768px) {
     .task-container {
         width: 90%;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 20px;
     }
 
     .task-details {
