--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,18 +7,14 @@
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
 </head>
 <body>
-   
-
     <!-- Corpo da Página -->
-            {{{body}}} 
+    {{{body}}} 
 </body>
 
 <script src="/jquery/jquery.min.js"></script>
-<script src="/public/js/script.js"></script>
 <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-<script>
-  
-</script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="/public/js/script.js"></script>
 </html>
