--- a/views/user/login.handlebars
+++ b/views/user/login.handlebars
@@ -2,8 +2,8 @@
     <link rel="stylesheet" href="/public/css/login.css">
 </head>
 
-
- <div class="main-login">
+<form action="/login" method="POST">
+    <div class="main-login">
         <div class="left-login">
             <h1>Faca login para visualizar suas </br>ativididades agendadas</h1>
             <img src="/public/img/Menina1.png" class="left-login-image" alt="ocean">
@@ -16,15 +16,14 @@
                 </div>
                 <div class="textfield">
                     <label for="usuario">Usuário</label>
-                    <input type="text" name="usuario" placeholder="Usuário">
+                    <input type="text" name="username" placeholder="Usuário">
                 </div>
                 <div class="textfield">
                     <label for="senha">Senha</label>
-                    <input type="password" name="senha" placeholder="Senha">
+                    <input type="password" name="password" placeholder="Senha">
                 </div>
-                <button class="btn-login">Login</button>
+                <button type="submit" class="btn-login">Login</button>
             </div>
-            
-            
         </div>
     </div>
+</form>
