--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -6,7 +6,7 @@
  <nav class="navbar">
   <div class="container-fluid">
     <a href="" class="navbar-brand" style="color: #FFFFF1">Tarefas</a>
-    <a href="" class="navbar-brand" style="color: #FFFFF1">Sair</a>
+    <a href="/logout" class="navbar-brand" style="color: #FFFFF1">Sair</a>
   </div>
 </nav>
 
