--- a/views/user/register.handlebars
+++ b/views/user/register.handlebars
@@ -2,22 +2,23 @@
     <link rel="stylesheet" href="/public/css/cadastro.css">
 </head>
 
- <div class="main-login">
+<form action="/register" method="POST">
+    <div class="main-login">
         <div class="right-login">
             <div class="card-login">
                 <h1>Cadastro</h1>
                 <div class="cadastro-text">
-                    <span class="registro-texto">Ja tem uma conta Cadastrada? </span><a href="/">Faca Login</a>
+                    <span class="registro-texto">Ja tem uma conta Cadastrada? </span><a href="/">Faça Login</a>
                 </div>
                 <div class="textfield">
                     <label for="usuario">Usuário</label>
-                    <input type="text" name="usuario" placeholder="Usuário">
+                    <input type="text" required name="username" placeholder="Usuário">
                 </div>
                 <div class="textfield">
                     <label for="senha">Senha</label>
-                    <input type="password" name="senha" placeholder="Senha">
+                    <input type="password" required name="password" placeholder="Senha">
                 </div>
-                <button class="btn-login">Cadastrar-se</button>
+                <button type="submit" class="btn-login">Cadastrar-se</button>
             </div>
         </div>
         <div class="left-login">
@@ -25,3 +26,4 @@
             <img src="/public/img/Menina2.png" class="left-login-image" alt="ocean">
         </div>
     </div>
+</form>
