--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -18,29 +18,42 @@
  
    <div class="container">
         <div class="content">
-            <form action="">
+            {{#each post}}
+                    {{#dataValues}}
+            <form method="post" action="/atualizar">
 
                 <div class="row">
                     <div class="col">
-                        <label for="nomeCompleto" class="form-label">Nome Completo</label>
-                        <input type="text" class="form-control" id="nomeCompleto" placeholder="Nome Completo" aria-label="Nome Completo">
+                        <input type="hidden" name="id" class="form-control" id="nome" value="{{id}}">
+                        <label for="nomeCompleto" class="form-label">Nome da Tarefa</label>
+                        <input type="text" class="form-control" name="nomeTarefa" id="nomeTarefa" placeholder="Nome Completo" aria-label="Nome Completo" value="{{title}}">
                     </div>
                     <div class="col">
                         <label for="dataConclusao" class="form-label">Data de Conclusão Prevista</label>
-                        <input type="date" class="form-control" id="dataConclusao" aria-label="Data de Conclusão Prevista">
+                        <input type="date" class="form-control" name="dataConclusao" id="dataConclusao" aria-label="Data de Conclusão Prevista" value="{{due}}">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <label for="Materia" class="form-label">Materia</label>
+                        <input type="text" class="form-control" name="nomeMateria" id="nomeMateria" placeholder="Nome da Materia" aria-label="Nome da Materia" value="{{class}}">
                     </div>
                 </div>
                 <br>
                 <div class="mb-3">
                     <label for="descricao" class="form-label">Descrição</label>
-                    <textarea class="form-control" id="descricao" rows="3"></textarea>
+                    <textarea class="form-control" name="descricao" id="descricao" rows="3">{{description}}</textarea>
                 </div>
 
+                 <div class="botoes">
+                <button type="submit" class="btn btn-primary btn-lg">Editar</button>
+                <button type="button" class="btn btn-primary btn-lg"  onclick="window.location.href='/todo'">Cancelar</button>
+    </div>
+
             </form>
+            {{/dataValues}}
+                {{/each}}
         </div>
     </div>
 
-     <div class="botoes">
-                <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='todo'">Editar</button>
-                <button type="button" class="btn btn-primary btn-lg"  onclick="window.location.href='todo'">Cancelar</button>
-    </div>
+    
