--- a/views/view.handlebars
+++ b/views/view.handlebars
@@ -9,7 +9,8 @@
   </div>
 </nav>
 
-
+{{#each post}}
+                    {{#dataValues}}
     <div class="task-container">
         <div class="back-button">
             <a href="/todo"><ion-icon name="arrow-back-outline"></ion-icon></a>
@@ -17,15 +18,17 @@
         <div class="task-details">
             <div class="row">
                 <div class="col">
-                    <h2>Tarefa 1</h2>
+                    <h2>{{title}}</h2>
                 </div>
                 <div class="edit-button">
-                    <button type="button" class="btn btn-primary" onclick="window.location.href='edit'">Editar</button>
+                    <button type="button" class="btn btn-primary"><a href="/edit/{{id}}" style="color:inherit">Editar</a></button>
                 </div>
             </div>
-            <p>Data: 27 de abril de 2024</p>
-            <p>Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ipsum faucibus vitae aliquet nec ullamcorper sit amet risus nullam. Risus ultricies tristique nulla aliquet enim tortor at. A pellentesque sit amet porttitor eget dolor morbi non arcu. Rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt. Sit amet facilisis magna etiam tempor orci eu lobortis. Quisque id diam vel quam elementum pulvinar. Dictum sit amet justo donec enim diam. Magna sit amet purus gravida quis blandit. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras.</p>
+            <p>Data: {{due}}</p>
+            <p>Descrição: {{description}}</p>
         </div>
         
     </div>
+     {{/dataValues}}
+                {{/each}}
 
