--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,3 +10,9 @@ body * {
     box-sizing: border-box;
     padding: 0;
 }
+
+.a {
+    text-decoration: none;
+    color: #FFFFF1;
+    cursor: pointer;
+}
