--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -4,48 +4,45 @@
 
 <nav class="navbar">
   <div class="container-fluid">
-    <a href="" class="navbar-brand" style="color: #FFFFF1">Tarefas</a>
-    <a href="/logout" class="navbar-brand" style="color: #FFFFF1">Sair</a>
+    <a href="/todo" class="navbar-brand a">ToDo List</a>
+    <a onclick="sair()" class="navbar-brand a">Sair</a>
   </div>
 </nav>
 
 <div class="header-container">
     <h1 class="tarefa">Crie sua Tarefa</h1>
     <h2 class="info">Informações da Tarefa</h2>
-  </div>
+</div>
 
- 
-   <div class="container">
-        <div class="content">
-            <form action="/cadastrar" method="post" >
+<div class="container">
+    <div class="content">
+        <form action="/cadastrar" method="post" >
 
-                <div class="row">
-                    <div class="col">
-                        <label for="nomeCompleto" class="form-label">Nome da tarefa</label>
-                        <input type="text" class="form-control" name="nomeTarefa" id="nomeTarefa" placeholder="Nome da Tarefa" aria-label="Nome da Tarefa">
-                    </div>
-                    <div class="col">
-                        <label for="dataConclusao" class="form-label">Data de Conclusão Prevista</label>
-                        <input type="date" class="form-control" name="dataConclusao" id="dataConclusao" aria-label="Data de Conclusão Prevista">
-                    </div>
+            <div class="row">
+                <div class="col">
+                    <label for="nomeCompleto" class="form-label">Nome da tarefa</label>
+                    <input type="text" class="form-control" name="nomeTarefa" id="nomeTarefa" placeholder="Nome da Tarefa" aria-label="Nome da Tarefa">
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <label for="Materia" class="form-label">Materia</label>
-                        <input type="text" class="form-control" name="nomeMateria" id="nomeMateria" placeholder="Nome da Materia" aria-label="Nome da Materia">
-                    </div>
+                <div class="col">
+                    <label for="dataConclusao" class="form-label">Data de Conclusão Prevista</label>
+                    <input type="date" class="form-control" name="dataConclusao" id="dataConclusao" aria-label="Data de Conclusão Prevista">
                 </div>
-                <br>
-                <div class="mb-3">
-                    <label for="descricao" class="form-label">Descrição</label>
-                    <textarea class="form-control" name="descricao" id="descricao" rows="3"></textarea>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <label for="Materia" class="form-label">Materia</label>
+                    <input type="text" class="form-control" name="nomeMateria" id="nomeMateria" placeholder="Nome da Materia" aria-label="Nome da Materia">
                 </div>
-                <div class="botoes">
-                    <button  type="submit" class="btn btn-primary btn-lg">Criar</button>
-                    <button  type="button" class="btn btn-primary btn-lg" onclick="window.location.href='/todo'" >Cancelar</button>
-                </div>
-            </form>
-        </div>
+            </div>
+            <br>
+            <div class="mb-3">
+                <label for="descricao" class="form-label">Descrição</label>
+                <textarea class="form-control" name="descricao" id="descricao" rows="3"></textarea>
+            </div>
+            <div class="botoes">
+                <button  type="submit" class="btn btn-primary btn-lg">Criar</button>
+                <button  type="button" class="btn btn-primary btn-lg" onclick="window.location.href='/todo'" >Cancelar</button>
+            </div>
+        </form>
     </div>
-
-     
+</div>
