--- a/views/todo.handlebars
+++ b/views/todo.handlebars
@@ -4,8 +4,8 @@
 
 <nav class="navbar">
   <div class="container-fluid">
-    <a href class="navbar-brand" style="color: #FFFFF1">Tarefas</a>
-    <a href="/logout" class="navbar-brand" style="color: #FFFFF1">Sair</a>
+    <a href="/todo" class="navbar-brand a">ToDo List</a>
+    <a onclick="sair()" class="navbar-brand a">Sair</a>
   </div>
 </nav>
 
@@ -18,52 +18,70 @@
       <span class="spn">+</span>
     </button>
   </div>
-
-  {{#each post}}
-  {{#dataValues}}
-  <div class="container">
-    <div class="task-container">
-      <div class="task-content">
-        <div class="task-details">
-          <div class="fw-bold">{{title}}</div>
-          <p>{{due}}</p>
-        </div>
-        <div class="task-buttons">
-          <button type="button" class="btn btn-primary btnview"
-            data-bs-toggle="modal" data-bs-target="#editarModal">
-            <a href="/view/{{id}}" style="color:inherit">Visualizar</a>
-
-          </button>
-          <button type="button" class="btn btn-primary btnconcluir"
-            data-bs-toggle="modal" data-bs-target="#exampleModal">
-            Concluir
-          </button>
+  <ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item" role="presentation">
+      <button class="nav-link active" id="pendents-tab" data-bs-toggle="tab" data-bs-target="#pendents" type="button" role="tab" aria-controls="pendents" aria-selected="true">Pendentes</button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="completes-tab" data-bs-toggle="tab" data-bs-target="#completes" type="button" role="tab" aria-controls="completes" aria-selected="false">Concluídas</button>
+    </li>
+  </ul>
+  <div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="pendents" role="tabpanel" aria-labelledby="pendents-tab">
+      <br>
+      {{#each tasksPendentes}}
+      {{#dataValues}}
+      <div class="task-container">
+        <div class="task-content">
+          <div class="task-details">
+            <div class="fw-bold">{{title}}</div>
+            <p>{{due}}</p>
+          </div>
+          <div class="task-buttons">
+            <a href="/view/{{id}}" style="color:inherit">
+              <button type="button" class="btn btn-primary btnview">
+                Visualizar
+              </button>
+            </a>
+            <a href="/completar/{{id}}">
+              <button type="button" class="btn btn-primary btnconcluir">
+                Concluir
+              </button>
+            </a>
+          </div>
         </div>
       </div>
+      {{/dataValues}}
+      {{/each}}
+    </div>
+
+    <div class="tab-pane fade" id="completes" role="tabpanel" aria-labelledby="completes-tab">
+      <br>
+      {{#each tasksConcluidos}}
+      {{#dataValues}}
+      <div class="task-container">
+        <div class="task-content">
+          <div class="task-details">
+            <div class="fw-bold">{{title}}</div>
+            <p>Vencimento: {{due}}</p>
+            <p>Conclusão: {{conclusion}}</p>
+          </div>
+          <div class="task-buttons">
+            <a href="/view/{{id}}" style="color:inherit">
+              <button type="button" class="btn btn-primary btnview">
+                Visualizar
+              </button>
+            </a>
+            <a href="/desfazer/{{id}}">
+              <button type="button" class="btn btn-primary btnconcluir">
+                Desfazer
+              </button>
+            </a>
+          </div>
+        </div>
+      </div>
+      {{/dataValues}}
+      {{/each}}
     </div>
   </div>
 </div>
-
-<div class="modal fade" id="exampleModal" tabindex="-1"
-  aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-body"><p>
-          Após concluir esta tarefa, você não poderá consultá-la novamente. Tem
-          certeza de que deseja concluí-la?
-        </p>
-
-      </div>
-      <div class="modal-footer">
-        <button type="submit" class="btn btn-primary btnconcluir"
-          data-bs-dismiss="modal"><a href="/completar/{{id}}"
-            style="color:inherit">Concluir</a></button>
-      </div>
-    </div>
-  </div>
-</div>
-
-{{/dataValues}}
-{{/each}}
-
-<!-- Modal -->
