--- a/public/css/todo.css
+++ b/public/css/todo.css
@@ -93,6 +93,19 @@ body{
     border: none;
 }
 
+.calendar .btn-primary{
+    background-color: #094067;
+}
+
+.calendar{
+    margin-top: 50px;
+}
+
+.task-buttons a{
+    color:inherit;
+    text-decoration: none;
+}
+
 .modal-body p{
     font-size: 26px;
 }
