--- a/views/user/register.handlebars
+++ b/views/user/register.handlebars
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="/public/css/cadastro.css">
 </head>
 
-<form action="/register" method="POST">
+<form class="form" action="/register" method="POST">
     <div class="main-login">
         <div class="right-login">
             <div class="card-login">
