--- a/views/user/login.handlebars
+++ b/views/user/login.handlebars
@@ -2,10 +2,10 @@
     <link rel="stylesheet" href="/public/css/login.css">
 </head>
 
-<form action="/login" method="POST">
+<form class="form" action="/login" method="POST">
     <div class="main-login">
         <div class="left-login">
-            <h1>Faca login para visualizar suas </br>ativididades agendadas</h1>
+           <h1>Faça login para visualizar suas </br>atividades agendadas</h1>
             <img src="/public/img/Menina1.png" class="left-login-image" alt="ocean">
         </div>
         <div class="right-login">
